--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-{body
-    backround-color: "blue";
+body{
+    background-color: rgba(143, 188, 255, 0.953);
+
+}
+table, th, td{
+    border: 1px dashed black;
+    text-align: center;
+}
+
+h1{
+    color:rgb(249, 221, 179);
+}
+
+img{
+    width: 300px;
+    border-radius: 20px;
 }
